--- a/Archmerge-i3wm/config
+++ b/Archmerge-i3wm/config
@@ -446,7 +446,7 @@ exec --no-startup-id volumeicon
 exec --no-startup-id variety
 
 # clipit
-exec --no-startup-id clipit
+exec --no-startup-id xfce4-clipman
 
 #Conky
 exec --no-startup-id conky -c ~/.config/i3/system-overview
