--- a/Archmerge-i3wm/config
+++ b/Archmerge-i3wm/config
@@ -449,7 +449,7 @@ exec --no-startup-id variety
 exec --no-startup-id xfce4-clipman
 
 #Conky
-exec --no-startup-id conky -c ~/.config/i3/system-overview
+#exec --no-startup-id conky -c ~/.config/i3/system-overview
 
 
 #####################################################################################################################
