--- a/Archmerge-i3wm/compton.conf
+++ b/Archmerge-i3wm/compton.conf
@@ -113,6 +113,7 @@ blur-background-fixed = false;			# Do not let blur radius adjust based on window
 #blur-kern = "3x3box";
 # blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 # Exclude conditions for background blur.
+# find the names with xwininfo
 blur-background-exclude = [
 				"window_type = 'dock'",
 				"class_g = 'Peek'",
