--- a/Archmerge-i3wm/config
+++ b/Archmerge-i3wm/config
@@ -831,8 +831,8 @@ bar {
     height 25
     workspace_buttons yes
     font pango:Noto Sans 14
-    #you can know the name via xrandr
-    #output DVI-0
+
+    tray_output $firstMonitor
 
 # OPTION 1 : i3status
 
