compton config not transparent for skype

--- a/Archmerge-i3wm/compton.conf
+++ b/Archmerge-i3wm/compton.conf
@@ -137,6 +137,7 @@ fade-out-step = 0.03;					# Opacity change between steps while fading out. (defa
 # no-fading-destroyed-argb = true;
 focus-exclude = [
      			"class_g = 'Cairo-clock'",
+     			"class_g = 'Skype'",        			
      			"name *?= 'Steam'",
      			"class_g *?= 'Steam'",
      			"class_g *?= 'Virtualbox'"
